ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lottery-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
